<resources>
    <string name="app_name">CheckInFace</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_profile">User Profile</string>
    <string name="camera">Camera</string>
    <string name="hello_blank_fragment">Hello dashboard fragment</string>
    <string name="student_list">Student List</string>
    <string name="attendance_list">Attendance List</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="logout">LOGOUT</string>
</resources>